[feat]-#13-이미지-URL-저장방식-변경